--- a/app-model-theory/aux/physics.sty
+++ b/app-model-theory/aux/physics.sty
@@ -27,6 +27,7 @@
 % Kinematics
 %
 \providecommand*{\acc}{a} % acceleration
+\providecommand*{\pos}{x} % position
 \providecommand*{\vel}{v} % velocity
 %
 % Dynamics
