--- a/app-model-theory/aux/revision.tex
+++ b/app-model-theory/aux/revision.tex
@@ -33,6 +33,12 @@ The following table describes the changes to \scare{\docTitle}.
 %
 \rhEntry{0.0.3}{22/08/2014}{Title and subtitle changed} \\
 %
+\rhEntry{0.0.4}{23/08/2014}{Math font changed to EulerVM} \\
+%
+\rhEntry{0.0.5}{27/08/2014}{Margin notes in sans-serif font} \\
+%
+\rhEntry{0.0.6}{08/09/2014}{Show labels in PDFs draft} \\
+%
 \doclastrow\docVersion & \docToday & Current document compilation \\
 %
 \bottomrule
