--- a/app-model-theory/doc/references.bib
+++ b/app-model-theory/doc/references.bib
@@ -2,12 +2,39 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for art at 2014-08-28 23:47:20 +0200 
+%% Created for art at 2014-09-04 09:08:03 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bhaskar:1990,
+	Author = {R. Bhaskar and Anil Nigam},
+	Date-Added = {2014-09-04 07:06:43 +0000},
+	Date-Modified = {2014-09-04 07:08:00 +0000},
+	Journal = {Artificial Intelligence},
+	Pages = {73-111},
+	Title = {Qualitative Physics Using Dimensional Analysis},
+	Volume = {45},
+	Year = {1990}}
+
+@book{tong:2013,
+	Author = {David Tong},
+	Date-Added = {2014-08-30 18:23:27 +0000},
+	Date-Modified = {2014-08-30 18:24:24 +0000},
+	Publisher = {University of Cambridge},
+	Series = {Mathematical Tripos},
+	Title = {Dynamics and Relativity},
+	Year = {2013}}
+
+@book{bridgman:1920,
+	Author = {Percy Williams Bridgman},
+	Date-Added = {2014-08-29 08:37:40 +0000},
+	Date-Modified = {2014-08-29 08:37:40 +0000},
+	Publisher = {Yale University Press},
+	Title = {Dimensional analysis},
+	Year = {1920}}
 
 @manual{hartl:2010,
 	Author = {Michael Hartl},
