--- a/app-model-theory/aux/math.sty
+++ b/app-model-theory/aux/math.sty
@@ -1,20 +1,23 @@
 % math
 % math commands, environments and macros
 
-\ProvidesPackage{aux/math}[27/08/2014 math macros and commands (rimbaudcode)]
+\ProvidesPackage{aux/math}[07/09/2014 math macros and commands (rimbaudcode)]
 
 %%% General
 %
 \def\beq{\begin{equation*}} %
 \def\eeq{\end{equation*}}   %
 %
-\providecommand*{\defas}{\doteq}               % is defined as
+\providecommand*{\defas}{\circeq}               % is defined as
 \providecommand*{\parth}[1]{\left({#1}\right)} % parentheses
-\providecommand*{\txt}[1]{_\text{#1}}          % subscript text in math mode
+%
 \providecommand*{\tuple}[1]{\left({#1}\right)} %
 \providecommand*{\vat}[1]{\!\left[{#1}\right]} % value (of a function) at a point
 %
-\providecommand*{\eqtxt}[1]{[\begingroup\small\,\text{#1}\,\endgroup]} % explanatory text in equations
+% Text in math mode
+%
+\providecommand*{\eqtxt}[1]{[\begingroup\small\,\text{\sffamily #1}\,\endgroup]} % explanatory text in equations
+\providecommand*{\txt}[1]{_{\text{\sffamily #1}}}                                % subscript text in math mode
 
 %%% Sets
 %
@@ -34,7 +37,7 @@
 %
 % Derivatives
 %
-\providecommand*{\dx}{\text{d}}    % derivative symbol
+\providecommand*{\dx}{\mathrm{d}}    % derivative symbol
 \providecommand*{\dt}[1]{\dot{#1}} % time (dot) derivative
 %
 \providecommand*{\iod}[1]{\dx_{#1}}      % index ordinary derivative
@@ -45,7 +48,16 @@
 % Integrals
 %
 \providecommand*{\sint}[2]{\int_{#1}{#2}}       % short integral
-\providecommand*{\lint}[3]{\int_{#1}{#2}\,{#3}} % long integral
+\providecommand*{\lint}[3]{\int_{#1}{#3}\;{#2}} % long integral: limit, integrand, dx
+%
+% Sums
+%
+\providecommand*{\lsum}[3]{\sum_{#1}^{#2}\,{#3}} % long sum
+\providecommand*{\ssum}[2]{\sum_{#1}\,{#2}}      % short sum
+%
+% Series
+%
+\providecommand*{\series}[3]{\left\lbrace{#1}\right\rbrace_{#2}^{#3}} % series
 
 %%% Geometric algebra
 %
@@ -79,8 +91,4 @@
 
 %%% Other
 %
-\providecommand*{\lsum}[3]{\sum_{#1}^{#2}\,{#3}} % long sum
-\providecommand*{\ssum}[2]{\sum_{#1}\,{#2}}      % short sum
-%
 \providecommand*{\ivbra}[1]{\left[{#1}\right]\txt{iv}}                % Iverson brackets
-\providecommand*{\series}[3]{\left\lbrace{#1}\right\rbrace_{#2}^{#3}} % series
