--- a/app-model-theory/aux/preambule.sty
+++ b/app-model-theory/aux/preambule.sty
@@ -1,24 +1,26 @@
 % preambule
 % general commands, environments and macros
 
-\ProvidesPackage{aux/preambule}[27/08/2014 preambule macros and commands (rimbaudcode)]
+\ProvidesPackage{aux/preambule}[08/09/2014 preambule macros and commands (rimbaudcode)]
 
 % margin notes
+%
+\providecommand*{\docmarginnotecolor}{darkgray} % margin notes color
 %
 \DeclareRobustCommand{\mgraffito}[1]
 {
   \marginnote{{
-      \begingroup
-      %\rm\sffamily % roman sans serif
-      \footnotesize %\small%
-      \ifodd\thepage\raggedright\else\raggedleft\fi
-      \parindent=0pt\lineskip=0pt\lineskiplimit=0pt %\baselineskip=10pt
-      \tolerance=2000\hyphenpenalty=300\exhyphenpenalty=300
-      \doublehyphendemerits=100000
-      \finalhyphendemerits=\doublehyphendemerits
-      \color{\docdivisioncolor}                     % graffito in graffit color?
-      \hspace{0pt}{#1}
-      \endgroup
+      \begingroup                                           %
+      \rm\sffamily                                          % roman sans serif
+      \footnotesize                                         %\small%
+      \ifodd\thepage\raggedright\else\raggedleft\fi         % ragged right or left
+      \parindent=0pt\lineskip=0pt\lineskiplimit=0pt         %\baselineskip=10pt
+      \tolerance=2000\hyphenpenalty=300\exhyphenpenalty=300 %
+      \doublehyphendemerits=100000                          %
+      \finalhyphendemerits=\doublehyphendemerits            %
+      \color{\docmarginnotecolor}                           % graffito in graffit color?
+      \hspace{0pt}{#1}                                      %
+      \endgroup                                             %
       }}
 }
 
@@ -134,6 +136,13 @@
 \renewcommand*{\PrelimWords}{\relax}
 \renewcommand*{\PrelimText}
 {{\texttt\footnotesize\color{halfgray}[\,v.\docVersion\xspace\thistime\xspace\docToday\,]}}
+%
+% Reference labels
+%
+\RequirePackage[inline]{showlabels} % show labels ([final] turn off package)
+%
+\providecommand*{\docreferencelabelcolor}{darkgray}                                  %
+\renewcommand{\showlabelfont}{\footnotesize\ttfamily\color{\docreferencelabelcolor}} %
 
 % final version
 %
@@ -143,6 +152,7 @@
 %%% Configs
 %
 % Listings
+%
 \lstset{language=Ruby, basicstyle=\footnotesize\ttfamily,breaklines=true}
 
 % siunitx setup
