--- a/app-model-theory/app-mod-theory.tex
+++ b/app-model-theory/app-mod-theory.tex
@@ -30,7 +30,6 @@
 
   %\include{doc/summary}
   \include{doc/example}
-  \include{doc/things}
 
   \phantomsection
   \bibliographystyle{aipnum4-1}\label{biblio}
@@ -43,7 +42,8 @@
   \bibliography{doc/references}
 
   \appendix
-  %\include{doc/ga}
+  \include{doc/math}
+  \include{doc/things}
 
   \include{aux/revision} % Update!
 
