--- a/app-model-theory/doc/ga.tex
+++ b/app-model-theory/doc/ga.tex
@@ -22,7 +22,7 @@ but not necessarily commutative (so expect $uv \not= vu$).
 
 \section{Normalized, antisymmetric frame}
 %
-Expand a vector $v$ in the (reference) \lingo{frame} $\series{\ifvec k}{k = 1}{3} = \elset{\ifvec k}$ with components $\ivec vk$ to get
+Expand a vector $v$ in the (reference) \lingo{frame} $\seq{\ifvec k}{k = 1}{3} = \elset{\ifvec k}$ with components $\ivec vk$ to get
 %
 \beq
   v = \lsum{k = 1}{3}{\ifvec k\ivec vk}\,,
